RT-20977–9: Code@TACC: New Images, Tweak CSS & FAQ

--- a/web-content/root/education/stem-programs/code-at-tacc/_faq.html
+++ b/web-content/root/education/stem-programs/code-at-tacc/_faq.html
@@ -1,5 +1,5 @@
 <!-- NOTE: This markup expects "Code@TACC - Styles" -->
-<div class="container">
+<div class="container  camp-faq-container">
 	<div class="row">
 		<div class="col-md-12">
 			<!-- (SHARED) BASICS -->
