--- a/web-content/root/education/stem-programs/code-at-tacc/cybersecurity-comptia.html
+++ b/web-content/root/education/stem-programs/code-at-tacc/cybersecurity-comptia.html
@@ -17,7 +17,7 @@
 	<div class="row">
 		<div class="col-md-12">
 			<p class="centered">
-				<img class="img-responsive" src="/documents/1084364/1822769/cybersecutiry-comptia-1.jpg" /></p>
+				<img class="img-responsive" src="/documents/1084364/2063698/cybersecutiry-comptia-1.jpeg" /></p>
 		</div>
 	</div>
 	<div class="row">
@@ -31,7 +31,7 @@
 		</div>
 		<div class="col-md-6">
 			<p class="centered">
-				<img class="img-responsive" src="/documents/1084364/1822769/cybersecutiry-comptia-2.jpg" /></p>
+				<img class="img-responsive" src="/documents/1084364/2063698/cybersecutiry-comptia-2.jpeg" /></p>
 		</div>
 	</div>
 	<!-- Short Info about camp -->
@@ -68,7 +68,7 @@
 	<div class="row">
 		<div class="col-md-6 col-xs-12">
 			<p>
-				<img alt="Students working on natural hazards project" class="img-responsive" src="/documents/1084364/1822769/cybersecutiry-comptia-3.jpg" /></p>
+				<img alt="Students working on natural hazards project" class="img-responsive" src="/documents/1084364/2063698/cybersecutiry-comptia-3.jpeg" /></p>
 		</div>
 		<div class="col-md-6 col-xs-12">
 			<h3 class="camp-subhead">
@@ -146,6 +146,7 @@
 				Frequently Asked Questions</h2>
 			<!-- SPECIFIC TO THIS CAMP -->
 			<div aria-multiselectable="table" class="panel-group" id="comptia-camp-faq" role="tablist">
+				<strong>Availability</strong>
 				<div class="panel panel-default">
 					<div class="panel-heading" id="dates" role="tab">
 						<h4 class="panel-title">
