--- a/web-content/root/education/stem-programs/code-at-tacc/cybersecurity.html
+++ b/web-content/root/education/stem-programs/code-at-tacc/cybersecurity.html
@@ -20,7 +20,7 @@
 	<div class="row">
 		<div class="col-md-12 col-sm-12">
 			<p class="centered">
-				<img class="img-responsive" src="/documents/1084364/1836493/cybersecurity-1.jpg/" /></p>
+				<img alt="Camp group photo" class="img-responsive" src="/documents/1084364/2063698/cybersecurity-0920.jpeg/" /></p>
 		</div>
 		<!-- <div class="col-md-6">
 			<p class="centered">
@@ -36,7 +36,7 @@
 				Students are expected to participate in Code@TACC Cybersecurity until the conclusion of the program. All students will be invited to participate in quarterly Back@TACC <abbr title="Science, Technology, Engineering, and Mathematics">STEM</abbr> workshops upon completion of the program.</p></div>
 		<div class="col-md-6">
 			<p class="centered">
-				<img alt="Student working on laptop" class="img-responsive" src="/documents/1084364/1836493/cybersecurity-2.jpg/" /></p>
+				<img alt="Students analyzing inside of computer" class="img-responsive" src="/documents/1084364/2063698/cybersecurity-2.jpeg/" /></p>
 		</div>
 	</div>
 	<!-- Short Info about camp -->
@@ -71,14 +71,12 @@
 	</div>
 	<!-- Prospective Activities -->
 	<div class="row">
-		<div class="col-md-6 col-xs-12">
-			<p class="centered">
-				<img alt="Students look at video screen" class="img-responsive" src="/documents/1084364/1836493/cybersecurity-3.jpg/" /></p>
-		</div>
-		<div class="col-md-6 col-xs-12">
-			<h3 class="camp-subhead">
-				PROSPECTIVE ACTIVITIES</h3>
-			<ul class="col-md-12  small">
+		<h3 class="camp-subhead">
+			PROSPECTIVE ACTIVITIES</h3>
+		<p class="col-md-3  centered">
+			<img alt="Students looking at laptop screen" class="img-responsive" src="/documents/1084364/2063698/cybersecurity-3.jpeg/" /></p>
+		<div class="col-md-6">
+			<ul class="small">
 				<li>
 					Use a project based-learning approach to foster creativity and problem solving skills.</li>
 				<li>
@@ -93,6 +91,8 @@
 					Collaborate with peers, college students, scientists, researchers and engineers.</li>
 			</ul>
 		</div>
+		<p class="col-md-3  centered">
+			<img alt="Students collaboratively working on laptop" class="img-responsive" src="/documents/1084364/2063698/cybersecurity-1.jpeg/" /></p>
 	</div>
 	<!-- Camp Info: FAQs, What not to Bring -->
 	<div class="row">
@@ -227,6 +227,7 @@
 				Frequently Asked Questions</h2>
 			<!-- SPECIFIC TO THIS CAMP -->
 			<div aria-multiselectable="table" class="panel-group" id="cybersecurity-camp-faq" role="tablist">
+				<strong>Dates</strong>
 				<div class="panel panel-default">
 					<div class="panel-heading" id="dates" role="tab">
 						<h4 class="panel-title">
@@ -235,16 +236,6 @@
 					<div aria-labelledby="dates" class="panel-collapse collapse" id="dates-answer" role="tabpanel">
 						<div class="panel-body">
 							<b>A:</b> Sunday, June 12 through Saturday, June 18, 2022.</div>
-					</div>
-				</div>
-				<div class="panel panel-default">
-					<div class="panel-heading" id="location" role="tab">
-						<h4 class="panel-title">
-							<a aria-controls="location-answer" aria-expanded="true" class="collapsed" data-parent="#cybersecurity-camp-faq" data-toggle="collapse" href="#location-answer" role="button"> <b>Q:</b> Where will camp be located? </a></h4>
-					</div>
-					<div aria-labelledby="location" class="panel-collapse collapse" id="location-answer" role="tabpanel">
-						<div class="panel-body">
-							<b>A:</b> This program will be located on the campus of The University of Texas at Austin.</div>
 					</div>
 				</div>
 			</div>
