--- a/web-content/root/education/stem-programs/code-at-tacc/robotics.html
+++ b/web-content/root/education/stem-programs/code-at-tacc/robotics.html
@@ -18,23 +18,33 @@
 		</div>
 	</header>
 	<div class="row">
+		<!-- RT-20977: Pending `robotics-5136.jpeg` -->
+		<div class="col-md-12" hidden>
+			<p class="centered">
+				<img alt="One female student working on a robotics project" class="img-responsive" src="/documents/1084364/2063698/robotics-3.jpeg/" /></p></p>
+		</div>
+		<!--
 		<div class="col-md-6">
 			<p class="centered">
-				<img alt="One male student working on a robotics project" class="img-responsive" src="/documents/1084364/1967140/robotics-2.jpg/" /></p>
+				<img alt="One male student working on a robotics project" class="img-responsive" src="/documents/1084364/2063698/robotics-2.jpeg/" /></p>
 		</div>
 		<div class="col-md-6">
 			<p class="centered">
-				<img alt="One female student working on a robotics project" class="img-responsive" src="/documents/1084364/1967140/robotics-3.jpg/" /></p>
-		</div>
+				<img alt="One female student working on a robotics project" class="img-responsive" src="/documents/1084364/2063698/robotics-3.jpeg/" /></p>
+		</div>-->
 	</div>
 	<div class="row">
-		<div class="col-md-12">
+		<div class="col-md-6">
 			<p>
 				Code@TACC is an innovative and exciting virtual summer program that incorporates a project-based learning approach to expose students to Science, Technology, Engineering, and Math (<dfn>STEM</dfn>) applications. Students foster their talent and creativity by being introduced to programming, robotics, and electronics.</p>
 			<p>
 				All current 9th and 10th grade (rising 10th and 11th grade) high school students are welcome to apply. We encourage the participation of students traditionally underrepresented in STEM. Selected students will be housed in a campus dorm at The University of Texas (UT) at Austin at no cost.</p>
 			<p>
 				Students are expected to participate in Code@TACC Sunday – Saturday until the conclusion of the program. All students will be invited to participate in quarterly Back@TACC STEM workshops upon completion of the program.</p>
+		</div>
+		<div class="col-md-6">
+			<p class="centered">
+				<img alt="Two girls working at desk" class="img-responsive" src="/documents/1084364/2063698/robotics-4439.jpeg/" /></p>
 		</div>
 	</div>
 	<!-- Short Info about camp -->
@@ -69,11 +79,11 @@
 	</div>
 	<!-- Prospective Activities -->
 	<div class="row">
-		<div class="col-md-3 col-xs-12">
+		<div class="col-md-6 col-xs-12">
 			<p class="centered">
-				<img alt="One male student testing a robotics project" class="img-responsive" src="/documents/1084364/1967140/robotics-1.jpg/" /></p>
+				<img alt="Students standing around robotics car track" class="img-responsive" src="/documents/1084364/2063698/robotics-4655.jpeg/" /></p>
 		</div>
-		<div class="col-md-9 col-xs-12">
+		<div class="col-md-6 col-xs-12">
 			<h3 class="camp-subhead">
 				PROSPECTIVE ACTIVITIES</h3>
 			<ul class="col-md-12">
@@ -209,6 +219,7 @@
 				Frequently Asked Questions</h2>
 			<!-- SPECIFIC TO THIS CAMP -->
 			<div aria-multiselectable="table" class="panel-group" id="robotics-camp-faq" role="tablist">
+				<strong>Dates</strong>
 				<div class="panel panel-default">
 					<div class="panel-heading" id="dates" role="tab">
 						<h4 class="panel-title">
