--- a/web-content/root/education/stem-programs/code-at-tacc/connected.html
+++ b/web-content/root/education/stem-programs/code-at-tacc/connected.html
@@ -16,7 +16,7 @@
 	<div class="row">
 		<div class="col-md-12">
 			<p class="centered">
-				<img class="img-responsive" src="/documents/1084364/1822769/connected-1.jpeg/" /></p>
+				<img class="img-responsive" src="/documents/1084364/2063698/connected-1.jpeg/" /></p>
 		</div>
 		<!--<div class="col-md-6">
 			<p class="centered">
@@ -38,7 +38,7 @@
 		</div>
 		<div class="col-md-6">
 			<p class="centered">
-				<img class="img-responsive" src="/documents/1084364/1967140/connected-6.jpg" /></p>
+				<img class="img-responsive" src="/documents/1084364/2063698/connected-5252.jpeg" /></p>
 		</div>
 	</div>
 	<!-- Short Info about camp -->
@@ -76,7 +76,7 @@
 	<div class="row">
 		<div class="col-md-6 col-xs-12">
 			<p class="centered">
-				<img alt="Students working on natural hazards project" class="img-responsive" src="/documents/1084364/1967140/connected-3.jpg" /></p>
+				<img alt="Students working on natural hazards project" class="img-responsive" src="/documents/1084364/2063698/connected-5804.jpeg" /></p>
 		</div>
 		<div class="col-md-6 col-xs-12">
 			<h4 class="camp-subhead">
@@ -150,6 +150,7 @@
 				Frequently Asked Questions</h2>
 			<!-- SPECIFIC TO THIS CAMP -->
 			<div aria-multiselectable="table" class="panel-group" id="connected-camp-faq" role="tablist">
+				<strong>Dates</strong>
 				<div class="panel panel-default">
 					<div class="panel-heading" id="dates" role="tab">
 						<h4 class="panel-title">
@@ -158,16 +159,6 @@
 					<div aria-labelledby="dates" class="panel-collapse collapse" id="dates-answer" role="tabpanel">
 						<div class="panel-body">
 							<b>A:</b> Sunday, July 24, 2022 through Saturday, July 30, 2022.</div>
-					</div>
-				</div>
-				<div class="panel panel-default">
-					<div class="panel-heading" id="location" role="tab">
-						<h4 class="panel-title">
-							<a aria-controls="location-answer" aria-expanded="true" class="collapsed" data-parent="#connected-camp-faq" data-toggle="collapse" href="#location-answer" role="button"> <b>Q:</b> Where will camp be located? </a></h4>
-					</div>
-					<div aria-labelledby="location" class="panel-collapse collapse" id="location-answer" role="tabpanel">
-						<div class="panel-body">
-							<b>A:</b> This program will be located on the campus of The University of Texas at Austin.</div>
 					</div>
 				</div>
 			</div>
