--- a/web-content/root/about/jobs.html
+++ b/web-content/root/about/jobs.html
@@ -34,6 +34,20 @@
 		<div class="panel panel-default">
 			<div class="panel-heading" id="data" role="tab">
 				<h4 class="panel-title">
+					<a aria-controls="senior-python-developer" aria-expanded="true" class="collapsed" data-parent="#careers" data-toggle="collapse" href="#senior-python-developer" role="button">Senior Python Developer</a></h4>
+			</div>
+			<div aria-labelledby="data" class="panel-collapse collapse" id="senior-python-developer" role="tabpanel">
+				<div class="panel-body">
+					<p>This position will contribute to the design, implementation and operation of cloud native applications and infrastructure supporting computational science endeavors.</p>
+
+					<p>
+						<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Senior-Python-Developer_R_00013540" target="_blank" title="Apply Now">Apply Now</a></strong></p>
+				</div>
+			</div>
+		</div>
+		<div class="panel panel-default">
+			<div class="panel-heading" id="data" role="tab">
+				<h4 class="panel-title">
 					<a aria-controls="senior-devops-developer" aria-expanded="true" class="collapsed" data-parent="#careers" data-toggle="collapse" href="#senior-devops-developer" role="button">Senior DevOps Developer</a></h4>
 			</div>
 			<div aria-labelledby="data" class="panel-collapse collapse" id="senior-devops-developer" role="tabpanel">
@@ -48,18 +62,29 @@
 		<div class="panel panel-default">
 			<div class="panel-heading" id="data" role="tab">
 				<h4 class="panel-title">
-					<a aria-controls="senior-python-developer" aria-expanded="true" class="collapsed" data-parent="#careers" data-toggle="collapse" href="#senior-python-developer" role="button">Senior Python Developer</a></h4>
+					<a aria-controls="project-and-stakeholder-relationship-manager" aria-expanded="true" class="collapsed" data-parent="#careers" data-toggle="collapse" href="#project-and-stakeholder-relationship-manager" role="button">Project and Stakeholder Relationship Manager</a></h4>
 			</div>
-			<div aria-labelledby="data" class="panel-collapse collapse" id="senior-python-developer" role="tabpanel">
+			<div aria-labelledby="data" class="panel-collapse collapse" id="project-and-stakeholder-relationship-manager" role="tabpanel">
 				<div class="panel-body">
 					<p>
-						This position will contribute to the design, implementation and operation of cloud native applications and infrastructure supporting computational science endeavors.</p>
-					<p>
-						<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Senior-Python-Developer_R_00013540" target="_blank" title="Apply Now">Apply Now</a></strong></p>
+						<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Project-and-Stakeholder-Relationship-Manager_R_00016731" target="_blank" title="Apply Now">Apply Now</a></strong></p>
 				</div>
 			</div>
 		</div>
-	</div>
+		<div class="panel panel-default">
+			<div class="panel-heading" id="data" role="tab">
+				<h4 class="panel-title">
+					<a aria-controls="senior-systems-admin" aria-expanded="true" class="collapsed" data-parent="#careers" data-toggle="collapse" href="#senior-systems-admin" role="button">Senior Systems Administrator</a></h4>
+			</div>
+			<div aria-labelledby="data" class="panel-collapse collapse" id="senior-systems-admin" role="tabpanel">
+				<div class="panel-body">
+					<p>The position will evaluate new architectures, systems, and other system tools to determine the best techniques for providing services to staff and users. Individual will serve as TACC's subject matter expert on configuration change management, security tools, and networking.</p>
+
+					<p>
+						<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Senior-Systems-Administrator_R_00017645" target="_blank" title="Apply Now">Apply Now</a></strong></p>
+				</div>
+			</div>
+		</div>
 	<!-- TEMPLATE: Job Listing --><!-- FAQ: Be sure to update and test the collapsible section UX --><!-- NOTE: The `id="data"` is repeated... bad. What relies on that ID? --><!-- RFE: Consider using <template> tag --><!--
 	<div class="panel panel-default">
 		<div class="panel-heading" id="data" role="tab">
