RT-21012: Code@TACC: Finalize FAQs

--- a/web-content/root/education/stem-programs/code-at-tacc/_faq--remote.html
+++ b/web-content/root/education/stem-programs/code-at-tacc/_faq--remote.html
@@ -2,9 +2,9 @@
 <div class="container  camp-faq-container">
 	<div class="row">
 		<div class="col-md-12">
-            <!-- (REMOTE) BASICS -->
-			<div id="remote-faq" aria-multiselectable="table" class="panel-group" role="tablist">
-                <strong>Remote</strong>
+			<!-- (REMOTE) BASICS -->
+			<div aria-multiselectable="table" class="panel-group" id="remote-faq" role="tablist">
+				<strong>Remote</strong>
 				<div class="panel panel-default">
 					<div class="panel-heading" id="location" role="tab">
 						<h4 class="panel-title">
@@ -13,6 +13,91 @@
 					<div aria-labelledby="location" class="panel-collapse collapse" id="location-answer" role="tabpanel">
 						<div class="panel-body">
 							<b>A:</b> This program will take place over the internet, virtually.</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<!-- RT-21012: This markup matched "Code@TACC - FAQ (- Common)" which was migrated into "Code@TACC - FAQ - On-Site" --><!-- NOTE: This markup expects "Code@TACC - Styles" -->
+<div class="container  camp-faq-container">
+	<div class="row">
+		<div class="col-md-12">
+			<!-- (SHARED) COMMON -->
+			<div aria-multiselectable="table" class="panel-group" id="shared-common-faq" role="tablist">
+				<strong>Common</strong>
+				<div class="panel panel-default">
+					<div class="panel-heading" id="involvement" role="tab">
+						<h4 class="panel-title">
+							<a aria-controls="involvement-answer" aria-expanded="true" class="collapsed" data-parent="#shared-common-faq" data-toggle="collapse" href="#involvement-answer" role="button"> <b>Q</b>: Can parents/guardians get involved in the camp? </a></h4>
+					</div>
+					<div aria-labelledby="involvement" class="panel-collapse collapse" id="involvement-answer" role="tabpanel">
+						<div class="panel-body">
+							<b>A:</b> Parents are encouraged to attend final presentations, virtually, on the last day of the program.</div>
+					</div>
+				</div>
+				<div class="panel panel-default">
+					<div class="panel-heading" id="costs" role="tab">
+						<h4 class="panel-title">
+							<a aria-controls="costs-answer" aria-expanded="true" class="collapsed" data-parent="#shared-common-faq" data-toggle="collapse" href="#costs-answer" role="button"> <b>Q</b>: What is the cost of camp? </a></h4>
+					</div>
+					<div aria-labelledby="costs" class="panel-collapse collapse" id="costs-answer" role="tabpanel">
+						<div class="panel-body">
+							<b>A:</b> There is no cost.</div>
+					</div>
+				</div>
+				<div class="panel panel-default">
+					<div class="panel-heading" id="contact" role="tab">
+						<h4 class="panel-title">
+							<a aria-controls="contact-answer" aria-expanded="true" class="collapsed" data-parent="#shared-common-faq" data-toggle="collapse" href="#contact-answer" role="button"> <b>Q</b>: How can I contact the UT Austin Code@TACC Team? </a></h4>
+					</div>
+					<div aria-labelledby="contact" class="panel-collapse collapse" id="contact-answer" role="tabpanel">
+						<div class="panel-body">
+							<b>A:</b> Please email our office at <a href="mailto:outreach@tacc.utexas.edu" target="_blank">outreach@tacc.utexas.edu</a> or call English: <a href="tel:512-232-0831" hreflang="en-US">512-232-0831</a>, Español: <a href="tel:512-232-0831" hreflang="es">512-368-7890</a>.</div>
+					</div>
+				</div>
+				<div class="panel panel-default">
+					<div class="panel-heading" id="supervision" role="tab">
+						<h4 class="panel-title">
+							<a aria-controls="supervision-answer" aria-expanded="true" class="collapsed" data-parent="#shared-common-faq" data-toggle="collapse" href="#supervision-answer" role="button"> <b>Q</b>: Who will be supervising my child during the camp? </a></h4>
+					</div>
+					<div aria-labelledby="supervision" class="panel-collapse collapse" id="supervision-answer" role="tabpanel">
+						<div class="panel-body">
+							<b>A:</b> Students will be supervised by college counselors. Counselors have been background-checked (also checked through the national sex offender registry) and have received child protection training.</div>
+					</div>
+				</div>
+			</div>
+			<!-- (SHARED) PARTICIPATION -->
+			<div aria-multiselectable="table" class="panel-group" id="shared-participation-faq" role="tablist">
+				<strong>Participation</strong>
+				<div class="panel panel-default">
+					<div class="panel-heading" id="wifi" role="tab">
+						<h4 class="panel-title">
+							<a aria-controls="wifi-answer" aria-expanded="true" class="collapsed" data-parent="#shared-participation-faq" data-toggle="collapse" href="#wifi-answer" role="button"> <b>Q</b>: Do I need to have access to Wi-Fi? </a></h4>
+					</div>
+					<div aria-labelledby="wifi" class="panel-collapse collapse" id="wifi-answer" role="tabpanel">
+						<div class="panel-body">
+							<b>A:</b> Participants who notify TACC will have an opportunity to receive a hotspot. Hotspots are limited and will be given out on a first request basis.</div>
+					</div>
+				</div>
+				<div class="panel panel-default">
+					<div class="panel-heading" id="computer" role="tab">
+						<h4 class="panel-title">
+							<a aria-controls="computer-answer" aria-expanded="true" class="collapsed" data-parent="#shared-participation-faq" data-toggle="collapse" href="#computer-answer" role="button"> <b>Q</b>: Do I have to have my own computer or laptop? </a></h4>
+					</div>
+					<div aria-labelledby="computer" class="panel-collapse collapse" id="computer-answer" role="tabpanel">
+						<div class="panel-body">
+							<b>A:</b> Participants will be provided the necessary electronic and sensor components to complete the program. Additionally, participants can use a windows or mac computer. If participants do not have the necessary equipment such as laptops, they can be loaned out from TACC.</div>
+					</div>
+				</div>
+				<div class="panel panel-default">
+					<div class="panel-heading" id="exit" role="tab">
+						<h4 class="panel-title">
+							<a aria-controls="exit-answer" aria-expanded="true" class="collapsed" data-parent="#shared-participation-faq" data-toggle="collapse" href="#exit-answer" role="button"> <b>Q</b>: Can I leave the program early? </a></h4>
+					</div>
+					<div aria-labelledby="exit" class="panel-collapse collapse" id="exit-answer" role="tabpanel">
+						<div class="panel-body">
+							<b>A:</b> Participants are expected to continue until the end of the program.</div>
 					</div>
 				</div>
 			</div>
