--- a/web-content/root/education/stem-programs/code-at-tacc/_faq.html
+++ b/web-content/root/education/stem-programs/code-at-tacc/_faq.html
@@ -2,13 +2,13 @@
 <div class="container  camp-faq-container">
 	<div class="row">
 		<div class="col-md-12">
-			<!-- (SHARED) BASICS -->
-			<div id="shared-basics-faq" aria-multiselectable="table" class="panel-group" role="tablist">
+			<!-- (SHARED) COMMON -->
+			<div id="shared-common-faq" aria-multiselectable="table" class="panel-group" role="tablist">
 				<strong>Common</strong>
 				<div class="panel panel-default">
 					<div class="panel-heading" id="involvement" role="tab">
 						<h4 class="panel-title">
-							<a aria-controls="involvement-answer" aria-expanded="true" class="collapsed" data-parent="#shared-basics-faq" data-toggle="collapse" href="#involvement-answer" role="button"> <b>Q</b>: Can parents/guardians get involved in the camp? </a></h4>
+							<a aria-controls="involvement-answer" aria-expanded="true" class="collapsed" data-parent="#shared-common-faq" data-toggle="collapse" href="#involvement-answer" role="button"> <b>Q</b>: Can parents/guardians get involved in the camp? </a></h4>
 					</div>
 					<div aria-labelledby="involvement" class="panel-collapse collapse" id="involvement-answer" role="tabpanel">
 						<div class="panel-body">
@@ -18,7 +18,7 @@
 				<div class="panel panel-default">
 					<div class="panel-heading" id="costs" role="tab">
 						<h4 class="panel-title">
-							<a aria-controls="costs-answer" aria-expanded="true" class="collapsed" data-parent="#shared-basics-faq" data-toggle="collapse" href="#costs-answer" role="button"> <b>Q</b>: What is the cost of camp? </a></h4>
+							<a aria-controls="costs-answer" aria-expanded="true" class="collapsed" data-parent="#shared-common-faq" data-toggle="collapse" href="#costs-answer" role="button"> <b>Q</b>: What is the cost of camp? </a></h4>
 					</div>
 					<div aria-labelledby="costs" class="panel-collapse collapse" id="costs-answer" role="tabpanel">
 						<div class="panel-body">
@@ -28,7 +28,7 @@
 				<div class="panel panel-default">
 					<div class="panel-heading" id="contact" role="tab">
 						<h4 class="panel-title">
-							<a aria-controls="contact-answer" aria-expanded="true" class="collapsed" data-parent="#shared-basics-faq" data-toggle="collapse" href="#contact-answer" role="button"> <b>Q</b>: How can I contact the UT Austin Code@TACC Team? </a></h4>
+							<a aria-controls="contact-answer" aria-expanded="true" class="collapsed" data-parent="#shared-common-faq" data-toggle="collapse" href="#contact-answer" role="button"> <b>Q</b>: How can I contact the UT Austin Code@TACC Team? </a></h4>
 					</div>
 					<div aria-labelledby="contact" class="panel-collapse collapse" id="contact-answer" role="tabpanel">
 						<div class="panel-body">
@@ -38,7 +38,7 @@
 				<div class="panel panel-default">
 					<div class="panel-heading" id="supervision" role="tab">
 						<h4 class="panel-title">
-							<a aria-controls="supervision-answer" aria-expanded="true" class="collapsed" data-parent="#shared-basics-faq" data-toggle="collapse" href="#supervision-answer" role="button"> <b>Q</b>: Who will be supervising my child during the camp? </a></h4>
+							<a aria-controls="supervision-answer" aria-expanded="true" class="collapsed" data-parent="#shared-common-faq" data-toggle="collapse" href="#supervision-answer" role="button"> <b>Q</b>: Who will be supervising my child during the camp? </a></h4>
 					</div>
 					<div aria-labelledby="supervision" class="panel-collapse collapse" id="supervision-answer" role="tabpanel">
 						<div class="panel-body">
