--- a/web-content/root/home--training-and-events.html
+++ b/web-content/root/home--training-and-events.html
@@ -15,3 +15,21 @@
 			February 18th, 2022</p>
 	</div>
 </div>
+<div class="row">
+	<div class="col-xs-3">
+		<a href="https://learn.tacc.utexas.edu/course/view.php?id=114" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/2064636/petsc.png" style="margin-bottom:10px;" /></a></div>
+	<div class="col-xs-9">
+		<p>
+			<a href="https://learn.tacc.utexas.edu/course/view.php?id=114" target="_blank">Introduction to Portable Extensible Toolkit for Scientific Computing (PETSc)<br /><small>(hybrid course - you may participate in person or online)</small></a><br />
+			February 4th – 9th, 2022</p>
+	</div>
+</div>
+<div class="row">
+	<div class="col-xs-3">
+		<a href="https://learn.tacc.utexas.edu/course/view.php?id=113" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/2064636/tacc-containers.png" style="margin-bottom:10px;" /></a></div>
+	<div class="col-xs-9">
+		<p>
+			<a href="https://learn.tacc.utexas.edu/course/view.php?id=113" target="_blank">Containers at TACC<br /><small>(hybrid course - you may participate in person or online)</small></a><br />
+			February 4th – 9th, 2022</p>
+	</div>
+</div>
