--- a/web-content/root/reu/alumni--content.html
+++ b/web-content/root/reu/alumni--content.html
@@ -1,140 +1,56 @@
-<style id="style--reu-alumni" type="text/css">
-    .reu-alumni-list a {
-        white-space: nowrap;
-    }</style>
-<section class="reu-alumni-list">
-	<h3>
-		REU Alumni</h3>
-	<h4>
-		2020 Cohort</h4>
-	<p>
-		<strong>STUDENT POSTERS</strong></p>
-	<ul>
-		<li>
-			Erin Searcy, Mathematics, Fort Valley State University: <a href="https://www.tacc.utexas.edu/documents/1084364/1920286/Searcy_Erin_Poster+.pptx" target="_blank">Visualizing Police Violence: Illustrating Police Brutality in the United States 1999-2020</a></li>
-		<li>
-			Regina-Mae Dominguez, Mathematics & Computer Science, University of Guam: <a href="https://www.tacc.utexas.edu/documents/1084364/1920286/Dominguez_Regina_Poster.png" target="_blank">Storytelling with Data: COVID-19's Impact on the Island of Guam</a></li>
-		<li>
-			Mariana Duarte, Computer Science, California State University, Monterey Bay: <a href="https://www.tacc.utexas.edu/documents/1084364/1920286/Duarte_Mariana_Poster.png" target="_blank">COVID-19: Essential Workers' Exposure</a></li>
-		<li>
-			Teague Foster, Computer Science, Central Texas College: <a href="https://www.tacc.utexas.edu/documents/1084364/1920286/Foster_Teague_Poster.png" target="_blank">Demonstrating the Relationship Between Socioeconomic Status, Mobility, Population Density, and COVID-19 Impact</a></li>
-		<li>
-			Jakerra Lance, Computing and Information Studies, History, Washington & Jefferson College: <a href="https://www.tacc.utexas.edu/documents/1084364/1920286/Lance_Jakerra.Poster.pptx.pdf" target="_blank">Using Virtual Reality As A Tool To Experience History</a></li>
-		<li>
-			Zachuary Steed, Computer Science, Minor: Business, Hendrix College: <a href="https://www.tacc.utexas.edu/documents/1084364/1920286/Steed_Zach_Poster.png" target="_blank">The Viral Bot: A Twitter Takeover</a></li>
-		<li>
-			Tyshawn Ferrell, Biology, Albany State University: <a href="https://www.tacc.utexas.edu/documents/1084364/1920286/Ferrell_Tyshawn_Poster.png" target="_blank">The Cleavage Potential of Cross-Species TMPRSS2 Variants toward SARS-CoV-2</a></li>
-		<li>
-			Carolyn Gonzalez, Computer Programming and Information Systems, Farmingdale State College: <a href="https://www.tacc.utexas.edu/documents/1084364/1920286/Gonzalez_Carolyn_Poster.png" target="_blank">Exploring Police Policy and Use of Force</a></li>
-		<li>
-			Richard Brown, Computer Information Technology, Broward College: <a href="https://www.tacc.utexas.edu/documents/1084364/1920286/Brown_Richard_Poster.png" target="_blank">COVID-19 Spread and Areas of High Risk in the United States</a></li>
-		<li>
-			Syema Ailia, Computer Science, Minor: Interaction Design, Northeastern Illinois University: <a href="https://www.tacc.utexas.edu/documents/1084364/1920286/Ailia_Syema_Poster.png" target="_blank">Investigation Human Behaviour During COVID-19 by Examining Twitter Data</a></li>
-	</ul>
-	<h4>
-		2019 Cohort</h4>
-	<p>
-		<strong>STUDENT PRESENTATIONS</strong></p>
-	<ul>
-		<li>
-			Mohammad Ali, Computer Science, The University of Texas at Dallas</li>
-		<li>
-			Zachuary Baptiste, Forensic Science, Chaminade University of Honolulu: <a href="https://www.tacc.utexas.edu/documents/1084364/1920284/Baptiste_Zachary.pptx" target="_blank">A Sense of Place: a Virtual Exploration of Mans Influence on the Natural World</a></li>
-		<li>
-			Viviana Castillo, Biochemistry, The University of Texas at Austin: <a href="https://www.tacc.utexas.edu/documents/1084364/1920284/Castillo_Viviana.pdf" target="_blank">Impact of Risk Factors on Women‘s Health During Pregnancy</a></li>
-		<li>
-			Amy Felix, Computer Science, Colorado State University: <a href="https://www.tacc.utexas.edu/documents/1084364/1920284/Felix_Amy.pptx" target="_blank">Human Context Recognition within Application Development</a></li>
-		<li>
-			Javier Gonzalez Martinez, Computer Science, Minor: Web Development, University of Puerto Rico - Arecibo Campus: <a href="https://www.tacc.utexas.edu/documents/1084364/1920284/Gonzalez_Martinez_Javier.pptx" target="_blank">Exploratory Data Analysis of Protein Occupancy near sRNA genes in Escherichia coli</a></li>
-		<li>
-			Javier Guillen, Biology, Minor: Health Physics, Fort Valley State University: <a href="https://www.tacc.utexas.edu/documents/1084364/1920284/Guillen_Javier.pdf" target="_blank">Adaptive Sensing: Micro-Controller Meshed Network Implementations</a></li>
-		<li>
-			Fidelia Hernandez, Cybersecurity and Forensics, Highline College: <a href="https://www.tacc.utexas.edu/documents/1084364/1920284/Hernandez_Fidelia.pptx" target="_blank">Virtual Exploration in a Socially Aware Context: An Exploration of Waller Creek</a></li>
-		<li>
-			Samuel Ofori, Mathematics, Fort Valley State University: <a href="https://www.tacc.utexas.edu/documents/1084364/1920284/Ofori_Samuel.pdf" target="_blank">Permeability of Multiphase FlowThrough a Fractured Porous Medium</a></li>
-		<li>
-			AnaPatricia Olvera Medina, Computer Science, Lehman Collge: <a href="https://www.tacc.utexas.edu/documents/1084364/1920284/Olvera_Medina_AnaPatricia.pptx" target="_blank">The Data to Dashboard Framework for Microcontrollers Using the Cloud-Hosted Realtime Data Service</a></li>
-		<li>
-			Christopher Rodriguez, Computer Science, California State University, Los Angeles: <a href="https://www.tacc.utexas.edu/documents/1084364/1920284/Rodriguez_Christopher.pdf" target="_blank">Modeling Hurricane Storm Surge through ADCIRC</a></li>
-		<li>
-			Jennie Youn, Computer Science, Emory University: <a href="https://www.tacc.utexas.edu/documents/1084364/1920284/Youn_Jennie.pdf" target="_blank">Virtual Exploration in a Socially Aware Context: The Challenges of Using Geographical Information in Virtual Reality</a></li>
-	</ul>
-	<h4>
-		2016 Cohort</h4>
-	<p>
-		<img class="img-responsive" src="/documents/1084364/1535368/reu-alumni-2016.jpg" /><!--<br /><i>Left to Right: (Back row) Fatima Al-Quaiti, St. Mary's University; Joshua Matos Gonzalez, University of Puerto Rico, Mayagüez Campus; Tiffany Connors, Texas State University; Keith Waggoner, University of Alabama; Joseph Molina, California State University, Monterey Bay; Marvis Cruz Fuentes, University of Florida; Grace Rodríguez Gómez, University of Puerto Rico, Río Piedras Campus; James Pippin, Fort Valley State University; (front row): Linda Moise, Virgina Union University. Not featured: Zeerak Abbas, The University of Texas at Austin</i></p>--></p>
-	<p>
-		<strong>STUDENT WEBSITES</strong></p>
-	<ul>
-		<li>
-			Linda Moise, Virginia Union University: <a href="http://lmoiseicertreu.wix.com/icertreu" target="_blank">lmoiseicertreu.wix.com/icertreu</a></li>
-		<li>
-			Joseph Molina,California State University, Monterey Bay: <a href="http://molinajoseph3388.wix.com/jmolina-icertreu" target="_blank">molinajoseph3388.wix.com/jmolina-icertreu</a></li>
-		<li>
-			Keith Waggoner, University of Alabama: <a href="http://keithwaggoner-icertreu.weebly.com" target="_blank">keithwaggoner-icertreu.weebly.com</a></li>
-		<li>
-			Marvis Cruz, University of Florida: <a href="http://cruzmarvis.webs.com/" target="_blank">cruzmarvis.webs.com</a></li>
-		<!--<li><a href="icert-reu-journal-blog.tumblr.com" target="_blank">icert-reu-journal-blog.tumblr.com</a></li>-->
-		<li>
-			Fatima Al-Quaiti, St. Mary's University at San Antonio: <a href="http://falquaiti.wix.com/mysite" target="_blank">falquaiti.wix.com/mysite</a></li>
-		<li>
-			Grace M. Rodríguez Gómez, University of Puerto Rico Río Piedras Campus: <a href="http://gracerodriguez6.wixsite.com/icert-reu" target="_blank">Gracerodriguez6.wix.com/icert-reu</a></li>
-		<li>
-			James Pippin, Fort Valley State University: <a href="http://jpippin-icertreu.weebly.com" target="_blank">jpippin-icertreu.weebly.com</a></li>
-		<li>
-			Joshua Matos, University of Puerto Rico at Mayaguez: <a href="http://jmatos-icert-reu.weebly.com" target="_blank">jmatos-icert-reu.weebly.com</a></li>
-		<li>
-			Zeerak Abbas, The University of Texas at Austin: <a href="http://zeerak-icert-reu.weebly.com/" target="_blank">zeerak-icert-reu.weebly.com</a></li>
-	</ul>
-	<hr />
-	<h4>
-		2015 Cohort</h4>
-	<p>
-		<img class="img-responsive" src="/documents/1084364/1535368/reu-alumni-2015.jpg" /></p>
-	<p>
-		<strong>STUDENT WEBSITES</strong></p>
-	<ul>
-		<li>
-			Margaret Arnold, University at Buffalo:&nbsp;<a href="http://megarnold.weebly.com/">http://megarnold.weebly.com</a></li>
-		<li>
-			Hayley Silverman, The University of Texas at Austin:&nbsp;<a href="http://hayleysilverman.weebly.com/">http://hayleysilverman.weebly.com/</a></li>
-		<li>
-			Mercy Grace Browder, Fort Valley State University:&nbsp;&nbsp;<a href="http://pipeline2interactivity.weebly.com/">http://pipeline2interactivity.weebly.com/</a></li>
-		<li>
-			Christopher Jordan Ray, Fort Valley State Universit:&nbsp;<a href="http://portrayingdata.weebly.com/">http://portrayingdata.weebly.com/</a></li>
-		<li>
-			Mark Smith, Carnegie Mellon University:&nbsp;<a href="http://austinformark.blogspot.com/">http://austinformark.blogspot.com</a></li>
-		<li>
-			Luis Prado-Regla, The University of Texas at Rio Grande Valley:&nbsp;<a href="http://ridamarriam.wix.com/ridasyeda">http://ridamarriam.wix.com/ridasyeda</a></li>
-		<li>
-			Benjamin Gonzalez, California State University, Fullerton:&nbsp;<a href="http://benjamin-gonzalez.weebly.com/">&nbsp;http://benjamin-gonzalez.weebly.com/h</a></li>
-		<li>
-			William Yang, University of Arkansas:&nbsp;<a href="http://dnamethylationreu.weebly.com/">http://dnamethylationreu.weebly.com</a></li>
-		<li>
-			Rida Syeda, College of Staten Island:&nbsp;<a href="http://luispr.weebly.com/">http://luispr.weebly.com/</a></li>
-		<li>
-			Gloria Zavala, DePaul University:&nbsp;<a href="http://zavala93gloria.wix.com/game-changer">http://zavala93gloria.wix.com/game-changer</a></li>
-	</ul>
-	<hr />
-	<h4>
-		2014 Cohort</h4>
-	<p>
-		<img class="img-responsive" src="/documents/1084364/1535368/reu-alumni-2014.jpg" /></p>
-	<p>
-		<strong>STUDENT WEBSITES</strong></p>
-	<ul>
-		<!--<li>Dominic Brooks, Fort Valley State University: <a href="" target="_blank">site</a></li>-->
-		<li>
-			Alejandro Rangel, The University of Texas at Rio Grande Valley: <a href="http://icertreuarangel.weebly.com/about.html" target="_blank">icertreuarangel.weebly.com/about.html</a></li>
-		<li>
-			Jamila Martin, University of the Virgin Islands: <a href="http://jkamartin.wixsite.com/jkamartin" target="_blank">jkamartin.wixsite.com/jkamartin</a></li>
-		<li>
-			Brian (Zach) Abel, The University of Texas at Austin: <a href="http://zachinfovis.weebly.com/" target="_blank">zachinfovis.weebly.com/</a></li>
-		<li>
-			Sterling Whittemore, The University of Texas at Austin: <a href="http://dswhittemore-icertreu.weebly.com/" target="_blank">dswhittemore-icertreu.weebly.com/</a></li>
-		<!--<li>Brittney Crocket, Fort Valley State University: <a href="" target="_blank">site</a></li>--><!--<li>Janette Garcia, The University of Texas at Rio Grande Valley: <a href="" target="_blank">site</a></li>-->
-		<li>
-			John Fitzpatrick, St. Mary's University: <a href="http://fitzpatrickj.weebly.com/" target="_blank">fitzpatrickj.weebly.com/</a></li>
-		<!--<li>Benjamin Corona, The University of Texas at Austin: <a href="" target="_blank">site</a></li>--><!--<li>Damilola Shonaike, The University of Texas at Austin: <a href="" target="_blank">site</a></li>--><!--<li>Arnold Eatmon, Fort Valley State University: <a href="" target="_blank">site</a></li>-->
-	</ul>
-</section>
+<h3>
+	Program Overview</h3>
+<p>
+	The proposed research projects are subject to change, contingent on new mentors and/or the research interests of the students. <em>To learn about past research projects, please visit the <a href="/reu/alumni">REU Alumni page</a>.</em></p>
+<h4>
+	June 6 — August 5, 2022</h4>
+<p>
+	The Cyberinfrastructure (CI) Research for Social Change Research Experience for Undergraduates (REU) at TACC is actively engaging 10 undergraduate students each summer for nine-weeks in solving real-world problems of national relevance, teaching them to not only be critical thinkers, but to be creative and reflective as well.</p>
+<p>
+	Students gain skills in advanced programming and problem solving and use the CI to conduct cutting-edge research in engineering, science, and computational medicine. Research projects emphasize advanced computing as a tool to power discoveries that will impact social change for future generations.</p>
+<p>
+	<img class="img-responsive" src="/image/journal/article?img_id=1394963&amp;t=1481056759800" /></p>
+<h4 style="margin-top:20px;">
+	EXPERIENCE AT-A-GLANCE</h4>
+<p>
+	The enriching and transformative experience at a world-class supercomputing center includes:</p>
+<ul>
+	<li>
+		Training in High Performance Computing (HPC), visualization, and data intensive computing</li>
+	<li>
+		Mentoring by researchers at The University of Texas at Austin</li>
+	<li>
+		Social and team-building activities</li>
+	<li>
+		Professional development and graduate school preparation</li>
+	<li>
+		Leadership development opportunities to develop and enhance communication skills</li>
+	<li>
+		Technical report and publication opportunities</li>
+</ul>
+<h4 style="margin-top:20px;">
+	STIPEND</h4>
+<p>
+	Participants will receive a $5,400 stipend. Additionally, travel grants to present research at an annual conference will be available to selected participants. In-person experiences include travel and housing (+meal card) at The University of Texas at Austin.</p>
+<h4 style="margin-top:20px;">
+	APPLICATION &amp; SELECTION</h4>
+<p>
+	The application period for Summer 2022 is January 17, 2022 - April 1, 2022. Notification of acceptance: rolling until April 12th (contingent on funding). Be the first to find out about updates: <a href="https://utexas.qualtrics.com/jfe/form/SV_dipKcjC7PAF5qmO" target="_blank">Interest Form</a>.<!--We recommend that you collect all information before starting the application to prevent loss of information if you leave or close the application page.--></p>
+<!--<ol>
+	<li>
+		Complete the <a href="https://docs.google.com/forms/d/e/1FAIpQLSeiU4rbEBA3d72YEd__WDjI2sPkyidYhRAqYb_TcEK3L4eo8Q/viewform">application</a> before March 1, 2021, 11:59pm CST.</li>
+	<li>
+		Email copy of unofficial or official transcript to <a href="mailto:CIR4SC@tacc.utexas.edu">CIR4SC@tacc.utexas.edu</a>. Selected participants will be required to submit an official transcript.</li>
+	<li>
+		Secure commitment from two recommenders. These individuals should know your academic abilities and work ethic. At least one recommender should be college/university faculty. It is your responsibility to ask recommenders to complete the <a href="https://utexas.qualtrics.com/jfe/form/SV_cOVFoBizpbpZT8x">recommendation form</a> by the March 1st application deadline.</li>
+</ol>
+<p>
+	Notifications of acceptance for Summer 2021: Rolling until March 15.</p>-->
+<h4 style="margin-top:20px;">
+	ELIGIBILITY</h4>
+<p>
+	Applicants must be a U.S. citizen or permanent resident of the United States; be and remain an undergraduate student in good standing; plan to complete an undergraduate degree program. Selected participants must be 18 years of age at the start of the program.</p>
+<h4 style="margin-top:20px;">
+	CONTACT</h4>
+<p>
+	Marques Bland, REU Recruitment Coordinator: <a href="mailto:mbland@tacc.utexas.edu">mbland@tacc.utexas.edu</a>.</p>
