RT-20677: REU Sentence Update For Ticket 20677

--- a/web-content/root/reu/alumni--content.html
+++ b/web-content/root/reu/alumni--content.html
@@ -35,7 +35,7 @@
 <h4 style="margin-top:20px;">
 	APPLICATION &amp; SELECTION</h4>
 <p>
-	The application period for Summer 2022 is January 17, 2022 - April 1, 2022. Notification of acceptance: rolling until April 12th (contingent on funding). Be the first to find out about updates: <a href="https://utexas.qualtrics.com/jfe/form/SV_dipKcjC7PAF5qmO" target="_blank">Interest Form</a>.<!--We recommend that you collect all information before starting the application to prevent loss of information if you leave or close the application page.--></p>
+	The application period for Summer 2022 is approaching (contingent on funding). Be the first to find out about updates: <a href="https://utexas.qualtrics.com/jfe/form/SV_dipKcjC7PAF5qmO" target="_blank">Interest Form</a>.<!--We recommend that you collect all information before starting the application to prevent loss of information if you leave or close the application page.--></p>
 <!--<ol>
 	<li>
 		Complete the <a href="https://docs.google.com/forms/d/e/1FAIpQLSeiU4rbEBA3d72YEd__WDjI2sPkyidYhRAqYb_TcEK3L4eo8Q/viewform">application</a> before March 1, 2021, 11:59pm CST.</li>
