Quick: Save Connected Camp from CMS

--- a/web-content/root/education/stem-programs/code-at-tacc/connected.html
+++ b/web-content/root/education/stem-programs/code-at-tacc/connected.html
@@ -6,8 +6,7 @@
 				<img alt="Code@TACC Summer High School STEM Camp Logo" class="img-responsive code-at-tacc-logo code-main-logo" src="https://www.tacc.utexas.edu/documents/1084364/1158641/Code-Wearables-1074px.png" /></p>
 		</div>
 		<div class="col-sm-12">
-			<span class="camp-name">Connected</span>
-		</div>
+			<span class="camp-name">Connected</span></div>
 		<div class="col-md-12">
 			<h2 class="camp-dates rwd-dates">
 				July 24 – July 30, 2022</h2>
@@ -34,11 +33,10 @@
 			<hr />
 			<p>
 				<img src="/documents/1084364/1822769/BPlogo.png/" style="width: 75px; float: left; margin: 2px 15px 10px 0px;" /><br />
-				<i>The camp was funded with the generosity from BP Upstream Digital &amp; Technology.</i></p>-->
-		</div>
+				<i>The camp was funded with the generosity from BP Upstream Digital &amp; Technology.</i></p>--></div>
 		<div class="col-md-6">
 			<p class="centered">
-				<img class="img-responsive" src="/documents/1084364/2063698/connected-5252.jpeg" /></p>
+				<img class="img-responsive" src="/documents/1084364/2063698/connected-6.jpeg" /></p>
 		</div>
 	</div>
 	<!-- Short Info about camp -->
@@ -49,24 +47,19 @@
 		</div>
 		<div class="col-md-4  data-banner__column data-banner__center-column">
 			<h2>
-				<span class="data-banner__title">Application</span>
-				<a class="data-banner__title-content" href="https://utexas.qualtrics.com/jfe/form/SV_40mCaKWMZmYQOQm" target="_blank">Click to Apply</a>
-			</h2>
+				<span class="data-banner__title">Application</span> <a class="data-banner__title-content" href="https://utexas.qualtrics.com/jfe/form/SV_40mCaKWMZmYQOQm" target="_blank">Click to Apply</a></h2>
 			<!-- OPEN: Close on Date. --><!--
 			<p class="data-banner__content">
 				Application closes _Month_ _DATE_, _YEAR_</p>
-			-->
-			<!-- OPEN: Close on Date. Notify by Date -->
+			--><!-- OPEN: Close on Date. Notify by Date -->
 			<p class="data-banner__content  small">
 				Application closes May 5, 2022. Students to be notified of acceptance on May 13, 2022.</p>
 			<!-- CLOSED: Notify by Date --><!--
 			<p class="data-banner__content  small">
 				Participants will be notified by _Month_ _DATE_, if they were selected to participate in the program.</p>
-			-->
-			<!-- CLOSED: Simple --><!--
+			--><!-- CLOSED: Simple --><!--
 			<p class="data-banner__content">
-				Applications closed.</p>-->
-		</div>
+				Applications closed.</p>--></div>
 		<div class="col-md-4  data-banner__column">
 			<h2>
 				<span class="data-banner__title">Cost</span> <span class="data-banner__title-content">FREE</span></h2>
@@ -76,7 +69,7 @@
 	<div class="row">
 		<div class="col-md-6 col-xs-12">
 			<p class="centered">
-				<img alt="Students working on natural hazards project" class="img-responsive" src="/documents/1084364/2063698/connected-5804.jpeg" /></p>
+				<img alt="Students working on natural hazards project" class="img-responsive" src="/documents/1084364/2063698/connected-3.jpeg" /></p>
 		</div>
 		<div class="col-md-6 col-xs-12">
 			<h4 class="camp-subhead">
@@ -125,8 +118,7 @@
 							<a href="https://powerforms.docusign.net/7f448a69-ffbe-4dc1-ae3f-cbab0cb657ad?env=na1&acct=d40a37d5-d708-44dd-9ea7-aab378b81326&accountId=d40a37d5-d708-44dd-9ea7-aab378b81326" target="_blank" title="2021 Code@TACC Connected Forms - ENGLISH">English</a></li>
 						<li>
 							<a href="https://powerforms.docusign.net/9ff76af9-3e82-481c-9cc0-06aa08e9f3a4?env=na1&acct=d40a37d5-d708-44dd-9ea7-aab378b81326&accountId=d40a37d5-d708-44dd-9ea7-aab378b81326" target="_blank" title="2021 Code@TACC Connected Forms - SPANISH">Español</a></li>
-					</ul>-->
-				</div>
+					</ul>--></div>
 				<div class="col-md-4 col-sm-12">
 					<h4 class="camp-subhead">
 						CAMP PROGRAM</h4>
@@ -137,8 +129,7 @@
 							<a href="https://www.tacc.utexas.edu/documents/1084364/1736606/Comm+Plan+Connected.pdf" target="_blank">English</a></li>
 						<li>
 							<a href="https://www.tacc.utexas.edu/documents/1084364/1736606/Comm+Plan+Connected+-+SPANISH.pdf" target="_blank">Español</a></li>
-					</ul>-->
-				</div>
+					</ul>--></div>
 			</div>
 		</div>
 	</div>
