Quick: Save Cybersecuirty Camp from CMS

--- a/web-content/root/education/stem-programs/code-at-tacc/cybersecurity.html
+++ b/web-content/root/education/stem-programs/code-at-tacc/cybersecurity.html
@@ -6,8 +6,7 @@
 				<img alt="Code@TACC Summer High School STEM Camp Logo" class="img-responsive code-at-tacc-logo code-main-logo" src="https://www.tacc.utexas.edu/documents/1084364/1158641/Code-Wearables-1074px.png" /></p>
 		</div>
 		<div class="col-sm-12">
-			<span class="camp-name">Cybersecurity</span>
-		</div>
+			<span class="camp-name">Cybersecurity</span></div>
 		<!-- <h1 style="text-align: center;">Code@TACCATX</h1> --><!-- <a style="text-align: center;"><img class="img-responsive" src="https://www.tacc.utexas.edu/documents/1084364/1151567/Code@TACC-logo-small.png" style="margin:0px; padding:0px; width: 300px;" /></a> --><!-- <div class="col-sm-12">
 			<p>
 				<img alt="DesignSafe-CI Camp logo" class="img-responsive code-logo-ds" src="https://www.tacc.utexas.edu/documents/1084364/1158641/DSCamp-logo-centered.png" /></p>
@@ -33,7 +32,8 @@
 			<p>
 				All current 10th through 11th grade high school students are welcome to apply. Students from diverse backgrounds are encouraged to apply. Selected students will be accepted and housed in a campus dorm at The University of Texas at Austin (UT).</p>
 			<p>
-				Students are expected to participate in Code@TACC Cybersecurity until the conclusion of the program. All students will be invited to participate in quarterly Back@TACC <abbr title="Science, Technology, Engineering, and Mathematics">STEM</abbr> workshops upon completion of the program.</p></div>
+				Students are expected to participate in Code@TACC Cybersecurity until the conclusion of the program. All students will be invited to participate in quarterly Back@TACC <abbr title="Science, Technology, Engineering, and Mathematics">STEM</abbr> workshops upon completion of the program.</p>
+		</div>
 		<div class="col-md-6">
 			<p class="centered">
 				<img alt="Students analyzing inside of computer" class="img-responsive" src="/documents/1084364/2063698/cybersecurity-2.jpeg/" /></p>
@@ -47,23 +47,18 @@
 		</div>
 		<div class="col-md-4  data-banner__column data-banner__center-column">
 			<h2>
-				<span class="data-banner__title">Application</span>
-				<a class="data-banner__title-content" href="https://utexas.qualtrics.com/jfe/form/SV_0qY4tR6vFwoeOLs" target="_blank">Click to Apply</a>
-			</h2>
+				<span class="data-banner__title">Application</span> <a class="data-banner__title-content" href="https://utexas.qualtrics.com/jfe/form/SV_0qY4tR6vFwoeOLs" target="_blank">Click to Apply</a></h2>
 			<!-- OPEN: Close on Date. --><!--
 			<p class="data-banner__content">
-				Registration closes on _Month_ _DATE_, _YEAR_.</p>-->
-			<!-- OPEN: Close on Date. Notify by Date -->
+				Registration closes on _Month_ _DATE_, _YEAR_.</p>--><!-- OPEN: Close on Date. Notify by Date -->
 			<p class="data-banner__content  small">
 				Application closes April 18, 2022. Students to be notified of acceptance on April 29, 2022.</p>
 			<!-- CLOSED: Notify by Date --><!--
 			<p class="data-banner__content  small">
 				Participants will be notified by _Month_ _DATE_, if they were selected to participate in the program.</p>
-			-->
-			<!-- CLOSED: Simple --><!--
+			--><!-- CLOSED: Simple --><!--
 			<p class="data-banner__content">
-				Applications closed.</p>-->
-		</div>
+				Applications closed.</p>--></div>
 		<div class="col-md-4  data-banner__column">
 			<h2>
 				<span class="data-banner__title">Cost</span> <span class="data-banner__title-content">FREE</span></h2>
@@ -169,16 +164,14 @@
 							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=d587675e-b44e-4223-af5d-9ca523cf5168&amp;env=na1&amp;acct=d40a37d5-d708-44dd-9ea7-aab378b81326&amp;v=2" target="_blank">English</a></li>
 						<li>
 							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=d438f709-6ea0-4a45-89bc-138daf40ad00&amp;env=na1&amp;acct=d40a37d5-d708-44dd-9ea7-aab378b81326&amp;v=2" target="_blank">Español</a></li>
-					</ul>-->
-					<!--<p>
+					</ul>--><!--<p>
 						<em>Code of Conduct:</em></p>
 					<ul class="info-list">
 						<li>
 							<a href="/documents/1084364/1736606/Code%40TACC+Code+of+Conduct.pdf" target="_blank" title="2021 Code@TACC Code of Conduct - ENGLISH">English</a></li>
 						<li>
 							<a href="/documents/1084364/1736606/Code%40TACC+Code+of+Conduct+-+SPANISH.pdf" target="_blank" title="2021 Code@TACC Code of Conduct - SPANISH">Español</a></li>
-					</ul>-->
-					<!--<p>
+					</ul>--><!--<p>
 						<em>Compliance Forms:</em></p>
 					<ul class="info-list">
 						<li>
@@ -186,24 +179,21 @@
 						<li>
 							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=ae067a87-eb26-42d4-be16-344a705d148f&amp;env=na1" target="_blank">Español</a></li>
 					</ul>
-					-->
-					<!--<p>
+					--><!--<p>
 						<em>Release and Indemnification Form:</em></p>
 					<ul class="info-list">
 						<li>
 							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=d587675e-b44e-4223-af5d-9ca523cf5168&amp;env=na1&amp;acct=d40a37d5-d708-44dd-9ea7-aab378b81326&amp;v=2" target="_blank">English</a></li>
 						<li>
 							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=d438f709-6ea0-4a45-89bc-138daf40ad00&amp;env=na1&amp;acct=d40a37d5-d708-44dd-9ea7-aab378b81326&amp;v=2" target="_blank">Español</a></li>
-					</ul>-->
-					<!--<p>
+					</ul>--><!--<p>
 						<em>Media Release:</em></p>
 					<ul class="info-list">
 						<li>
 							<a href="/documents/1084364/1736606/Media+Release+Robotics+-+Adult.pdf" target="_blank">English</a></li>
 						<li>
 							<a href="/documents/1084364/1736606/Media+Release+Robotics+-+Adult+-+SPANISH.pdf" target="_blank">Español</a></li>
-					</ul>-->
-				</div>
+					</ul>--></div>
 				<div class="col-md-4 col-sm-12">
 					<h4 class="camp-subhead">
 						CAMP PROGRAM</h4>
@@ -214,8 +204,7 @@
 							<a href="/documents/1084364/1736606/Comm+Plan+GenCyber.pdf" target="_blank" title="Code@TACC Robotics Communication Plan - ENGLISH">English</a></li>
 						<li>
 							<a href="/documents/1084364/1736606/Comm+Plan+GenCyber+-+SPANISH.pdf" target="_blank" title="Code@TACC Robotics Communication Plan - SPANISH">Español</a></li>
-					</ul>-->
-				</div>
+					</ul>--></div>
 			</div>
 		</div>
 	</div>
