Quick: Save CompTIA Camp from CMS

--- a/web-content/root/education/stem-programs/code-at-tacc/cybersecurity-comptia.html
+++ b/web-content/root/education/stem-programs/code-at-tacc/cybersecurity-comptia.html
@@ -6,9 +6,7 @@
 				<img alt="Code@TACC Summer High School STEM Camp Logo" class="img-responsive code-at-tacc-logo code-main-logo" src="https://www.tacc.utexas.edu/documents/1084364/1158641/Code-Wearables-1074px.png" /></p>
 		</div>
 		<div class="col-sm-12">
-			<span class="camp-name">GenCyber@TACC</span>
-			<small class="camp-name camp-name--minor"><span class="text-nowrap">CompTIA Security</span> + <span class="text-nowrap">Certification Virtual Program</span></small>
-		</div>
+			<span class="camp-name">GenCyber@TACC</span> <small class="camp-name camp-name--minor"><span class="text-nowrap">CompTIA Security</span> + <span class="text-nowrap">Certification Virtual Program</span></small></div>
 		<div class="col-md-12">
 			<h2 class="camp-dates rwd-dates">
 				Approx. 4 Hours per Week</h2>
@@ -42,23 +40,19 @@
 		</div>
 		<div class="col-md-4  data-banner__column data-banner__center-column">
 			<h2>
-				<span class="data-banner__title">Application</span>
-				<a class="data-banner__title-content" href="https://utexas.qualtrics.com/jfe/form/SV_e2R16TteAK9kUo5" target="_blank">Click to Apply</a></h2>
+				<span class="data-banner__title">Application</span> <a class="data-banner__title-content" href="https://utexas.qualtrics.com/jfe/form/SV_e2R16TteAK9kUo5" target="_blank">Click to Apply</a></h2>
 			<!-- OPEN: Close on Date. -->
 			<p class="data-banner__content">
 				Registration closes on June 3rd, 2020.</p>
 			<!-- OPEN: Close on Date. Notify by Date --><!--
 			<p class="data-banner__content  small">
 				Registration closes on _Month_ _DATE_, _YEAR_. Students to be notified of acceptance on _Month_ _DATE_, _YEAR_.</p>
-			-->
-			<!-- CLOSED: Notify by Date --><!--
+			--><!-- CLOSED: Notify by Date --><!--
 			<p class="data-banner__content  small">
 				Participants will be notified by _Month_ _DATE_, if they were selected to participate in the program.</p>
-			-->
-			<!-- CLOSED: Simple --><!--
+			--><!-- CLOSED: Simple --><!--
 			<p class="data-banner__content">
-				Applications closed.</p>-->
-		</div>
+				Applications closed.</p>--></div>
 		<div class="col-md-4  data-banner__column">
 			<h2>
 				<span class="data-banner__title">Cost</span> <span class="data-banner__title-content">FREE</span></h2>
@@ -97,44 +91,43 @@
 		<div class="col-md-12">
 			<h2 class="camp-subhead">
 				Virtual Program Information</h2>
+		</div>
+		<div class="row  camp-info">
+			<div class="col-md-4 col-sm-12">
+				<h4 class="camp-subhead">
+					WHAT TO KNOW</h4>
+				<p>
+					Willingness to learn</p>
+				<p>
+					UT EID for the Attendee<br />
+					(<a href="https://idmanager.its.utexas.edu/eid_self_help/" target="_blank" title="UT EID Self-Service Tools">get a <abbr title="University of Texas Electronic Identity">UT EID</abbr></a>)<br />
+					(<a href="https://youtu.be/EePa27mGuGE" target="_blank" title="Creating a UT EID (YouTube video instructions)">video instructions</a>)</p>
 			</div>
-			<div class="row  camp-info">
-				<div class="col-md-4 col-sm-12">
-					<h4 class="camp-subhead">
-						WHAT TO KNOW</h4>
-					<p>
-						Willingness to learn</p>
-					<p>
-						UT EID for the Attendee<br />
-						(<a href="https://idmanager.its.utexas.edu/eid_self_help/" target="_blank" title="UT EID Self-Service Tools">get a <abbr title="University of Texas Electronic Identity">UT EID</abbr></a>)<br />
-						(<a href="https://youtu.be/EePa27mGuGE" target="_blank" title="Creating a UT EID (YouTube video instructions)">video instructions</a>)</p>
-				</div>
-				<div class="col-md-4 col-sm-12">
-					<h4 class="camp-subhead">
-						PROGRAM FORMS</h4>
-					<p>
-						<em>Release and Indemnification:</em></p>
-					<ul class="info-list">
-						<li>
-							<a href=" https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=6aa21f10-26a2-4ccc-bb3c-0bb9ba4665f4&amp;env=na1&amp;acct=d40a37d5-d708-44dd-9ea7-aab378b81326&amp;v=2" target="_blank">Minors Required Documents</a><br />
+			<div class="col-md-4 col-sm-12">
+				<h4 class="camp-subhead">
+					PROGRAM FORMS</h4>
+				<p>
+					<em>Release and Indemnification:</em></p>
+				<ul class="info-list">
+					<li>
+						<a href=" https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=6aa21f10-26a2-4ccc-bb3c-0bb9ba4665f4&amp;env=na1&amp;acct=d40a37d5-d708-44dd-9ea7-aab378b81326&amp;v=2" target="_blank">Minors Required Documents</a><br />
 						(17 years old and under)</li>
-						<li>
-							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=5964ea9d-f8d1-45e4-a116-1e76b0512332&amp;env=na1&amp;acct=d40a37d5-d708-44dd-9ea7-aab378b81326&amp;v=2" target="_blank">Menores Requeridos Documentos</a><br />
+					<li>
+						<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=5964ea9d-f8d1-45e4-a116-1e76b0512332&amp;env=na1&amp;acct=d40a37d5-d708-44dd-9ea7-aab378b81326&amp;v=2" target="_blank">Menores Requeridos Documentos</a><br />
 						(17 años y menores)</li>
-					</ul>
-				</div>
-				<div class="col-md-4 col-sm-12">
-					<h4 class="camp-subhead">
-						CAMP PROGRAM</h4>
-					<p>
-						<em>Y.P.P. Communication Plan:</em></p>
-					<ul class="info-list">
-						<li>
-							<a href="/documents/1084364/1736606/Comm+Plan+-+Cybersecurity+CompTIA.pdf" target="_blank">English</a></li>
-						<li>
-							<a href="/documents/1084364/1736606/Comm+Plan+-+Cybersecurity+CompTIA+-+SPANISH.pdf" target="_blank">Español</a></li>
-					</ul>
-				</div>
+				</ul>
+			</div>
+			<div class="col-md-4 col-sm-12">
+				<h4 class="camp-subhead">
+					CAMP PROGRAM</h4>
+				<p>
+					<em>Y.P.P. Communication Plan:</em></p>
+				<ul class="info-list">
+					<li>
+						<a href="/documents/1084364/1736606/Comm+Plan+-+Cybersecurity+CompTIA.pdf" target="_blank">English</a></li>
+					<li>
+						<a href="/documents/1084364/1736606/Comm+Plan+-+Cybersecurity+CompTIA+-+SPANISH.pdf" target="_blank">Español</a></li>
+				</ul>
 			</div>
 		</div>
 	</div>
